--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="status">
             <div class="status-bar" id="PMH">
                 <span>P*H님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -60,7 +60,7 @@
         <div class="status">
             <div class="status-bar" id="홍ㅇ주">
                 <span>홍*주님</span>
-                <span>7회</span>
+                <span>12회</span>
             </div>
         </div>
         <div class="avatar">
@@ -72,7 +72,7 @@
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>10회 🥈</span>
+                <span>12회 🥉</span>
             </div>
         </div>
         <div class="avatar">
@@ -83,7 +83,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ올">
                 <span>*올님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -116,7 +116,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅎ선">
                 <span>백*선님</span>
-                <span>5회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -138,7 +138,7 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>12회 🥇</span>
+                <span>14회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -150,7 +150,7 @@
         <div class="status">
             <div class="status-bar" id="Poyeon">
                 <span>Poye*n님</span>
-                <span>8회 🥉</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -172,7 +172,7 @@
         <div class="status">
             <div class="status-bar" id="문ㅎ민">
                 <span>문*민님</span>
-                <span>6회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -183,7 +183,7 @@
         <div class="status">
             <div class="status-bar" id="구래수ㅌ챠">
                 <span>구래수*챠님</span>
-                <span>3회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -194,7 +194,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ예">
                 <span>최*예님</span>
-                <span>2회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -205,7 +205,7 @@
         <div class="status">
             <div class="status-bar" id="더칸ㄷ라">
                 <span>더칸*라님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -227,7 +227,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅇ진">
                 <span>김*진님</span>
-                <span>6회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -238,7 +238,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ주">
                 <span>*주님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -260,7 +260,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅎ나">
                 <span>김*나님</span>
-                <span>5회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -271,7 +271,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ란">
                 <span>*란님</span>
-                <span>1회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -304,7 +304,7 @@
         <div class="status">
             <div class="status-bar" id="L">
                 <span>L님</span>
-                <span>1회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -348,7 +348,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ은">
                 <span>*은님</span>
-                <span>4회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -359,7 +359,7 @@
         <div class="status">
             <div class="status-bar" id="심ㄱ원">
                 <span>심*원님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -381,7 +381,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ개">
                 <span>*개님</span>
-                <span>12회 🥇</span>
+                <span>15회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -392,7 +392,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅇ정">
                 <span>최*정님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -403,7 +403,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ송">
                 <span>*송님</span>
-                <span>3회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -414,7 +414,7 @@
         <div class="status">
             <div class="status-bar" id="송ㅎ조">
                 <span>송*조님</span>
-                <span>6회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -436,7 +436,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅅ희">
                 <span>김*희님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -469,7 +469,7 @@
         <div class="status">
             <div class="status-bar" id="예ㅅ지">
                 <span>예*지님</span>
-                <span>5회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -491,7 +491,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ나">
                 <span>*나님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -522,7 +522,7 @@
     </div> 
     <div class="player">
         <div class="status">
-            <div class="status-bar" id="김ㅎ나">
+            <div class="status-bar" id="김해나">
                 <span>김*나님</span>
                 <span>1회</span>
             </div>
@@ -546,7 +546,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅎ경">
                 <span>김*경님</span>
-                <span>5회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -557,7 +557,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ훈">
                 <span>최*훈님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -568,7 +568,7 @@
         <div class="status">
             <div class="status-bar" id="ㄱ정">
                 <span>*정님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -590,7 +590,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅈ민">
                 <span>백*민님</span>
-                <span>2회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -601,7 +601,7 @@
         <div class="status">
             <div class="status-bar" id="dana">
                 <span>da*a님</span>
-                <span>6회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -612,7 +612,7 @@
         <div class="status">
             <div class="status-bar" id="danb">
                 <span>da*b님</span>
-                <span>1회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -623,7 +623,7 @@
         <div class="status">
             <div class="status-bar" id="정ㅅ영">
                 <span>정*영님</span>
-                <span>1회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -634,7 +634,7 @@
         <div class="status">
             <div class="status-bar" id="Ines">
                 <span>In*s님</span>
-                <span>1회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -645,7 +645,7 @@
         <div class="status">
             <div class="status-bar" id="김ㄷ은">
                 <span>김*은님</span>
-                <span>3회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -656,7 +656,7 @@
         <div class="status">
             <div class="status-bar" id="정ㄷ진">
                 <span>정*진님</span>
-                <span>1회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -679,6 +679,39 @@
             <div class="status-bar" id="Hyejung">
                 <span>Hyeju*g님</span>
                 <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="내이름은ㅎ써">
+                <span>내이름은홍써님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="블링ㅇ채">
+                <span>블링*채님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="이ㅈ인">
+                <span>이*인님</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
