--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>14회 🥈</span>
+                <span>16회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -150,7 +150,7 @@
         <div class="status">
             <div class="status-bar" id="Poyeon">
                 <span>Poye*n님</span>
-                <span>9회</span>
+                <span>10회</span>
             </div>
         </div>
         <div class="avatar">
@@ -183,7 +183,7 @@
         <div class="status">
             <div class="status-bar" id="구래수ㅌ챠">
                 <span>구래수*챠님</span>
-                <span>8회</span>
+                <span>10회</span>
             </div>
         </div>
         <div class="avatar">
@@ -348,7 +348,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ은">
                 <span>*은님</span>
-                <span>9회</span>
+                <span>10회</span>
             </div>
         </div>
         <div class="avatar">
@@ -381,7 +381,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ개">
                 <span>*개님</span>
-                <span>15회 🥇</span>
+                <span>15회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -392,7 +392,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅇ정">
                 <span>최*정님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -436,7 +436,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅅ희">
                 <span>김*희님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -491,7 +491,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ나">
                 <span>*나님</span>
-                <span>4회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -502,7 +502,7 @@
         <div class="status">
             <div class="status-bar" id="점">
                 <span>.님</span>
-                <span>4회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -557,7 +557,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ훈">
                 <span>최*훈님</span>
-                <span>4회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -567,8 +567,8 @@
     <div class="player">
         <div class="status">
             <div class="status-bar" id="ㄱ정">
-                <span>*정님</span>
-                <span>5회</span>
+                <span>*졍님</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -623,7 +623,7 @@
         <div class="status">
             <div class="status-bar" id="정ㅅ영">
                 <span>정*영님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -634,7 +634,7 @@
         <div class="status">
             <div class="status-bar" id="Ines">
                 <span>In*s님</span>
-                <span>6회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -645,7 +645,7 @@
         <div class="status">
             <div class="status-bar" id="김ㄷ은">
                 <span>김*은님</span>
-                <span>8회</span>
+                <span>11회</span>
             </div>
         </div>
         <div class="avatar">
@@ -656,7 +656,7 @@
         <div class="status">
             <div class="status-bar" id="정ㄷ진">
                 <span>정*진님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -678,7 +678,7 @@
         <div class="status">
             <div class="status-bar" id="Hyejung">
                 <span>Hyeju*g님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -712,6 +712,39 @@
             <div class="status-bar" id="이ㅈ인">
                 <span>이*인님</span>
                 <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="주영">
+                <span>*영님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="박ㅎ연">
+                <span>박*연님</span>
+                <span>5회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="오늘도고맙습ㄴ다">
+                <span>오늘도고맙습*다님</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
