--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ정">
                 <span>*정님</span>
-                <span>3회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -60,7 +60,7 @@
         <div class="status">
             <div class="status-bar" id="홍ㅇ주">
                 <span>홍*주님</span>
-                <span>12회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -72,7 +72,7 @@
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>12회 🥉</span>
+                <span>19회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -94,7 +94,7 @@
         <div class="status">
             <div class="status-bar" id="Joyce">
                 <span>Jo*ce님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -138,7 +138,7 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>16회 🥇</span>
+                <span>16회 🥉</span>
             </div>
         </div>
         <div class="avatar">
@@ -150,7 +150,7 @@
         <div class="status">
             <div class="status-bar" id="Poyeon">
                 <span>Poye*n님</span>
-                <span>10회</span>
+                <span>12회</span>
             </div>
         </div>
         <div class="avatar">
@@ -172,7 +172,7 @@
         <div class="status">
             <div class="status-bar" id="문ㅎ민">
                 <span>문*민님</span>
-                <span>7회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -194,7 +194,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ예">
                 <span>최*예님</span>
-                <span>5회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -205,7 +205,7 @@
         <div class="status">
             <div class="status-bar" id="더칸ㄷ라">
                 <span>더칸*라님</span>
-                <span>4회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -238,7 +238,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ주">
                 <span>*주님</span>
-                <span>5회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -271,7 +271,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ란">
                 <span>*란님</span>
-                <span>3회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -348,7 +348,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ은">
                 <span>*은님</span>
-                <span>10회</span>
+                <span>17회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -359,7 +359,7 @@
         <div class="status">
             <div class="status-bar" id="심ㄱ원">
                 <span>심*원님</span>
-                <span>4회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -381,7 +381,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ개">
                 <span>*개님</span>
-                <span>15회 🥈</span>
+                <span>17회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -403,7 +403,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ송">
                 <span>*송님</span>
-                <span>6회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -414,7 +414,7 @@
         <div class="status">
             <div class="status-bar" id="송ㅎ조">
                 <span>송*조님</span>
-                <span>8회</span>
+                <span>11회</span>
             </div>
         </div>
         <div class="avatar">
@@ -425,7 +425,7 @@
         <div class="status">
             <div class="status-bar" id="점점점">
                 <span>.*.님</span>
-                <span>4회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -436,7 +436,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅅ희">
                 <span>김*희님</span>
-                <span>4회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -447,7 +447,7 @@
         <div class="status">
             <div class="status-bar" id="정ㅇ교">
                 <span>정*교님</span>
-                <span>3회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -469,7 +469,7 @@
         <div class="status">
             <div class="status-bar" id="예ㅅ지">
                 <span>예*지님</span>
-                <span>8회</span>
+                <span>12회</span>
             </div>
         </div>
         <div class="avatar">
@@ -502,7 +502,7 @@
         <div class="status">
             <div class="status-bar" id="점">
                 <span>.님</span>
-                <span>7회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -535,7 +535,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ연">
                 <span>*연님</span>
-                <span>3회</span>
+                <span>1회</span>
             </div>
         </div>
         <div class="avatar">
@@ -546,7 +546,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅎ경">
                 <span>김*경님</span>
-                <span>9회</span>
+                <span>15회</span>
             </div>
         </div>
         <div class="avatar">
@@ -568,7 +568,7 @@
         <div class="status">
             <div class="status-bar" id="ㄱ정">
                 <span>*졍님</span>
-                <span>9회</span>
+                <span>14회</span>
             </div>
         </div>
         <div class="avatar">
@@ -579,7 +579,7 @@
         <div class="status">
             <div class="status-bar" id="한ㄷ미">
                 <span>한*미님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -612,7 +612,7 @@
         <div class="status">
             <div class="status-bar" id="danb">
                 <span>da*b님</span>
-                <span>2회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -634,7 +634,7 @@
         <div class="status">
             <div class="status-bar" id="Ines">
                 <span>In*s님</span>
-                <span>9회</span>
+                <span>15회</span>
             </div>
         </div>
         <div class="avatar">
@@ -645,7 +645,7 @@
         <div class="status">
             <div class="status-bar" id="김ㄷ은">
                 <span>김*은님</span>
-                <span>11회</span>
+                <span>13회</span>
             </div>
         </div>
         <div class="avatar">
@@ -678,7 +678,7 @@
         <div class="status">
             <div class="status-bar" id="Hyejung">
                 <span>Hyeju*g님</span>
-                <span>4회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -711,7 +711,7 @@
         <div class="status">
             <div class="status-bar" id="이ㅈ인">
                 <span>이*인님</span>
-                <span>2회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -722,7 +722,7 @@
         <div class="status">
             <div class="status-bar" id="주영">
                 <span>*영님</span>
-                <span>2회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -745,6 +745,17 @@
             <div class="status-bar" id="오늘도고맙습ㄴ다">
                 <span>오늘도고맙습*다님</span>
                 <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="보ㅂ스">
+                <span>보*스님</span>
+                <span>1회</span>
             </div>
         </div>
         <div class="avatar">
