--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ정">
                 <span>*정님</span>
-                <span>6회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -49,7 +49,7 @@
         <div class="status">
             <div class="status-bar" id="PMH">
                 <span>P*H님</span>
-                <span>5회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -72,7 +72,7 @@
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>19회 🥇</span>
+                <span>22회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -94,7 +94,7 @@
         <div class="status">
             <div class="status-bar" id="Joyce">
                 <span>Jo*ce님</span>
-                <span>4회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -116,7 +116,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅎ선">
                 <span>백*선님</span>
-                <span>6회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -138,7 +138,7 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>16회 🥉</span>
+                <span>21회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -150,7 +150,7 @@
         <div class="status">
             <div class="status-bar" id="Poyeon">
                 <span>Poye*n님</span>
-                <span>12회</span>
+                <span>13회</span>
             </div>
         </div>
         <div class="avatar">
@@ -183,7 +183,7 @@
         <div class="status">
             <div class="status-bar" id="구래수ㅌ챠">
                 <span>구래수*챠님</span>
-                <span>10회</span>
+                <span>11회</span>
             </div>
         </div>
         <div class="avatar">
@@ -194,7 +194,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ예">
                 <span>최*예님</span>
-                <span>7회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -205,7 +205,7 @@
         <div class="status">
             <div class="status-bar" id="더칸ㄷ라">
                 <span>더칸*라님</span>
-                <span>6회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -227,7 +227,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅇ진">
                 <span>김*진님</span>
-                <span>7회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -238,7 +238,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ주">
                 <span>*주님</span>
-                <span>6회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -260,7 +260,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅎ나">
                 <span>김*나님</span>
-                <span>7회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -315,7 +315,7 @@
         <div class="status">
             <div class="status-bar" id="Shane">
                 <span>Sha*e님</span>
-                <span>3회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -348,7 +348,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ은">
                 <span>*은님</span>
-                <span>17회 🥈</span>
+                <span>17회</span>
             </div>
         </div>
         <div class="avatar">
@@ -359,7 +359,7 @@
         <div class="status">
             <div class="status-bar" id="심ㄱ원">
                 <span>심*원님</span>
-                <span>5회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -381,7 +381,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ개">
                 <span>*개님</span>
-                <span>17회 🥈</span>
+                <span>22회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -392,7 +392,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅇ정">
                 <span>최*정님</span>
-                <span>4회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -403,7 +403,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ송">
                 <span>*송님</span>
-                <span>8회</span>
+                <span>13회</span>
             </div>
         </div>
         <div class="avatar">
@@ -414,7 +414,7 @@
         <div class="status">
             <div class="status-bar" id="송ㅎ조">
                 <span>송*조님</span>
-                <span>11회</span>
+                <span>18회</span>
             </div>
         </div>
         <div class="avatar">
@@ -447,7 +447,7 @@
         <div class="status">
             <div class="status-bar" id="정ㅇ교">
                 <span>정*교님</span>
-                <span>6회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -590,7 +590,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅈ민">
                 <span>백*민님</span>
-                <span>4회</span>
+                <span>10회</span>
             </div>
         </div>
         <div class="avatar">
@@ -612,7 +612,7 @@
         <div class="status">
             <div class="status-bar" id="danb">
                 <span>da*b님</span>
-                <span>5회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -623,7 +623,7 @@
         <div class="status">
             <div class="status-bar" id="정ㅅ영">
                 <span>정*영님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -634,7 +634,7 @@
         <div class="status">
             <div class="status-bar" id="Ines">
                 <span>In*s님</span>
-                <span>15회</span>
+                <span>18회</span>
             </div>
         </div>
         <div class="avatar">
@@ -656,7 +656,7 @@
         <div class="status">
             <div class="status-bar" id="정ㄷ진">
                 <span>정*진님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -678,7 +678,7 @@
         <div class="status">
             <div class="status-bar" id="Hyejung">
                 <span>Hyeju*g님</span>
-                <span>6회</span>
+                <span>8회</span>
             </div>
         </div>
         <div class="avatar">
@@ -733,7 +733,7 @@
         <div class="status">
             <div class="status-bar" id="박ㅎ연">
                 <span>박*연님</span>
-                <span>5회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -744,7 +744,7 @@
         <div class="status">
             <div class="status-bar" id="오늘도고맙습ㄴ다">
                 <span>오늘도고맙습*다님</span>
-                <span>3회</span>
+                <span>63회</span>
             </div>
         </div>
         <div class="avatar">
@@ -755,7 +755,18 @@
         <div class="status">
             <div class="status-bar" id="보ㅂ스">
                 <span>보*스님</span>
-                <span>1회</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="채ㅊ원">
+                <span>채*원님</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
