--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>31회 🥇</span>
+                <span>31회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -83,7 +83,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ올">
                 <span>*올님</span>
-                <span>8회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -116,7 +116,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅎ선">
                 <span>백*선님</span>
-                <span>13회</span>
+                <span>15회</span>
             </div>
         </div>
         <div class="avatar">
@@ -138,7 +138,7 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>29회 🥈</span>
+                <span>29회</span>
             </div>
         </div>
         <div class="avatar">
@@ -194,7 +194,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ예">
                 <span>최*예님</span>
-                <span>13회</span>
+                <span>14회</span>
             </div>
         </div>
         <div class="avatar">
@@ -227,7 +227,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅇ진">
                 <span>김*진님</span>
-                <span>8회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -271,7 +271,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ란">
                 <span>*란님</span>
-                <span>8회</span>
+                <span>10회</span>
             </div>
         </div>
         <div class="avatar">
@@ -381,7 +381,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ개">
                 <span>*개님</span>
-                <span>26회 🥉</span>
+                <span>26회</span>
             </div>
         </div>
         <div class="avatar">
@@ -414,7 +414,7 @@
         <div class="status">
             <div class="status-bar" id="송ㅎ조">
                 <span>송*조님</span>
-                <span>19회</span>
+                <span>21회</span>
             </div>
         </div>
         <div class="avatar">
@@ -425,7 +425,7 @@
         <div class="status">
             <div class="status-bar" id="점점점">
                 <span>.*.님</span>
-                <span>8회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -447,7 +447,7 @@
         <div class="status">
             <div class="status-bar" id="정ㅇ교">
                 <span>정*교님</span>
-                <span>12회</span>
+                <span>13회</span>
             </div>
         </div>
         <div class="avatar">
@@ -546,7 +546,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅎ경">
                 <span>김*경님</span>
-                <span>29회 🥈</span>
+                <span>31회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -568,7 +568,7 @@
         <div class="status">
             <div class="status-bar" id="ㄱ정">
                 <span>*졍님</span>
-                <span>21회</span>
+                <span>24회</span>
             </div>
         </div>
         <div class="avatar">
@@ -634,7 +634,7 @@
         <div class="status">
             <div class="status-bar" id="Ines">
                 <span>In*s님</span>
-                <span>29회 🥈</span>
+                <span>32회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -656,7 +656,7 @@
         <div class="status">
             <div class="status-bar" id="정ㄷ진">
                 <span>정*진님</span>
-                <span>7회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
@@ -688,7 +688,7 @@
     <div class="player">
         <div class="status">
             <div class="status-bar" id="내이름은ㅎ써">
-                <span>내이름은홍써님</span>
+                <span>내이름은*써님</span>
                 <span>2회</span>
             </div>
         </div>
@@ -722,7 +722,7 @@
         <div class="status">
             <div class="status-bar" id="주영">
                 <span>*영님</span>
-                <span>8회</span>
+                <span>10회</span>
             </div>
         </div>
         <div class="avatar">
@@ -788,7 +788,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅎ선">
                 <span>최*선님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -799,7 +799,7 @@
         <div class="status">
             <div class="status-bar" id="이ㅅ민">
                 <span>이*민님</span>
-                <span>6회</span>
+                <span>10회</span>
             </div>
         </div>
         <div class="avatar">
@@ -810,7 +810,7 @@
         <div class="status">
             <div class="status-bar" id="윤">
                 <span>윤님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -843,7 +843,7 @@
         <div class="status">
             <div class="status-bar" id="양ㅅ은">
                 <span>양*은님</span>
-                <span>4회</span>
+                <span>9회</span>
             </div>
         </div>
         <div class="avatar">
